Sabnzbd truncate fix + css improvements

--- a/style/sass/modules/text.scss
+++ b/style/sass/modules/text.scss
@@ -81,6 +81,7 @@ h2 {
   font-weight: 600;
   color: $header-grey;
   margin: 0;
+  padding: 0 16px;
 }
 
 p {
