--- a/style/sass/partials/calendar.scss
+++ b/style/sass/partials/calendar.scss
@@ -13,10 +13,6 @@
 
 .today,
 .tomorrow {
-  h2 {
-    padding: 0 16px;
-  }
-
   .core_item_content {
     width: 328px;
   }
