--- a/style/sass/partials/couchpotato.scss
+++ b/style/sass/partials/couchpotato.scss
@@ -13,12 +13,6 @@
 
 .wanted,
 .snatched {
-  h2 {
-    height: 40px;
-    line-height: 40px;
-    padding: 0 16px;
-  }
-
   .cp_item {
     padding-left: 72px;
     height: 56px;
