--- a/style/sass/partials/facebook.scss
+++ b/style/sass/partials/facebook.scss
@@ -12,10 +12,6 @@
 }
 
 .notifications {
-  h2 {
-    padding: 0 16px;
-  }
-
   a {
     @include text-truncate;
     color: $black;
