--- a/style/sass/partials/general.scss
+++ b/style/sass/partials/general.scss
@@ -13,6 +13,7 @@ a {
 }
 
 body {
+  width: 0;
   margin: 0;
   padding: 0;
   overflow-x: auto;
