--- a/style/sass/partials/gmail.scss
+++ b/style/sass/partials/gmail.scss
@@ -13,10 +13,6 @@
 
 .mail_unread,
 .mail_read {
-  h2 {
-    padding: 0 16px;
-  }
-
   .gm_message {
     line-height: initial;
     overflow: hidden;
