--- a/style/sass/partials/sabnzbd.scss
+++ b/style/sass/partials/sabnzbd.scss
@@ -13,10 +13,6 @@
 
 .queue,
 .history {
-  h2 {
-    padding: 0 16px;
-  }
-
   .sab_item_name,
   .sab_item_error {
     width: 368px;
