--- a/style/sass/partials/sickbeard.scss
+++ b/style/sass/partials/sickbeard.scss
@@ -11,17 +11,6 @@
   }
 }
 
-.sb_missed,
-.sb_today,
-.sb_soon,
-.sb_later {
-  h2 {
-    height: 40px;
-    line-height: 40px;
-    padding: 0 16px;
-  }
-}
-
 .sb_item {
   padding-left: 72px;
   height: 56px;
